_generated-doc/3.2/config/quarkus-agroal.adoc

:summaryTableId: quarkus-agroal
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-agroal_configuration]]link:#quarkus-agroal_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-agroal_quarkus.datasource.jdbc]]`link:#quarkus-agroal_quarkus.datasource.jdbc[quarkus.datasource.jdbc]`


[.description]
--
If we create a JDBC datasource for this datasource.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-agroal_quarkus.datasource.jdbc.driver]]`link:#quarkus-agroal_quarkus.datasource.jdbc.driver[quarkus.datasource.jdbc.driver]`


[.description]
--
The datasource driver class name

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_DRIVER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_DRIVER+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-agroal_quarkus.datasource.jdbc.transactions]]`link:#quarkus-agroal_quarkus.datasource.jdbc.transactions[quarkus.datasource.jdbc.transactions]`


[.description]
--
Whether we want to use regular JDBC transactions, XA, or disable all transactional capabilities.

When enabling XA you will need a driver implementing `javax.sql.XADataSource`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_TRANSACTIONS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_TRANSACTIONS+++`
endif::add-copy-button-to-env-var[]
-- a|
`enabled`, `xa`, `disabled` 
|`enabled`


a|icon:lock[title=Fixed at build time] [[quarkus-agroal_quarkus.datasource.jdbc.enable-metrics]]`link:#quarkus-agroal_quarkus.datasource.jdbc.enable-metrics[quarkus.datasource.jdbc.enable-metrics]`


[.description]
--
Enable datasource metrics collection. If unspecified, collecting metrics will be enabled by default if a metrics extension is active.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_ENABLE_METRICS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_ENABLE_METRICS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-agroal_quarkus.datasource.jdbc.tracing]]`link:#quarkus-agroal_quarkus.datasource.jdbc.tracing[quarkus.datasource.jdbc.tracing]`


[.description]
--
Enable JDBC tracing. Disabled by default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_TRACING+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_TRACING+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-agroal_quarkus.datasource.jdbc.telemetry]]`link:#quarkus-agroal_quarkus.datasource.jdbc.telemetry[quarkus.datasource.jdbc.telemetry]`


[.description]
--
Enable OpenTelemetry JDBC instrumentation.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_TELEMETRY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_TELEMETRY+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-agroal_quarkus.datasource.jdbc.url]]`link:#quarkus-agroal_quarkus.datasource.jdbc.url[quarkus.datasource.jdbc.url]`


[.description]
--
The datasource URL

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_URL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_URL+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-agroal_quarkus.datasource.jdbc.initial-size]]`link:#quarkus-agroal_quarkus.datasource.jdbc.initial-size[quarkus.datasource.jdbc.initial-size]`


[.description]
--
The initial size of the pool. Usually you will want to set the initial size to match at least the minimal size, but this is not enforced so to allow for architectures which prefer a lazy initialization of the connections on boot, while being able to sustain a minimal pool size after boot.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_INITIAL_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_INITIAL_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-agroal_quarkus.datasource.jdbc.min-size]]`link:#quarkus-agroal_quarkus.datasource.jdbc.min-size[quarkus.datasource.jdbc.min-size]`


[.description]
--
The datasource pool minimum size

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_MIN_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_MIN_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`0`


a| [[quarkus-agroal_quarkus.datasource.jdbc.max-size]]`link:#quarkus-agroal_quarkus.datasource.jdbc.max-size[quarkus.datasource.jdbc.max-size]`


[.description]
--
The datasource pool maximum size

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_MAX_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_MAX_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`20`


a| [[quarkus-agroal_quarkus.datasource.jdbc.background-validation-interval]]`link:#quarkus-agroal_quarkus.datasource.jdbc.background-validation-interval[quarkus.datasource.jdbc.background-validation-interval]`


[.description]
--
The interval at which we validate idle connections in the background.

Set to `0` to disable background validation.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_BACKGROUND_VALIDATION_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_BACKGROUND_VALIDATION_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`2M`


a| [[quarkus-agroal_quarkus.datasource.jdbc.foreground-validation-interval]]`link:#quarkus-agroal_quarkus.datasource.jdbc.foreground-validation-interval[quarkus.datasource.jdbc.foreground-validation-interval]`


[.description]
--
Perform foreground validation on connections that have been idle for longer than the specified interval.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_FOREGROUND_VALIDATION_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_FOREGROUND_VALIDATION_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-agroal_quarkus.datasource.jdbc.acquisition-timeout]]`link:#quarkus-agroal_quarkus.datasource.jdbc.acquisition-timeout[quarkus.datasource.jdbc.acquisition-timeout]`


[.description]
--
The timeout before cancelling the acquisition of a new connection

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_ACQUISITION_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_ACQUISITION_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`5`


a| [[quarkus-agroal_quarkus.datasource.jdbc.leak-detection-interval]]`link:#quarkus-agroal_quarkus.datasource.jdbc.leak-detection-interval[quarkus.datasource.jdbc.leak-detection-interval]`


[.description]
--
The interval at which we check for connection leaks.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_LEAK_DETECTION_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_LEAK_DETECTION_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`This feature is disabled by default.`


a| [[quarkus-agroal_quarkus.datasource.jdbc.idle-removal-interval]]`link:#quarkus-agroal_quarkus.datasource.jdbc.idle-removal-interval[quarkus.datasource.jdbc.idle-removal-interval]`


[.description]
--
The interval at which we try to remove idle connections.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_IDLE_REMOVAL_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_IDLE_REMOVAL_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`5M`


a| [[quarkus-agroal_quarkus.datasource.jdbc.max-lifetime]]`link:#quarkus-agroal_quarkus.datasource.jdbc.max-lifetime[quarkus.datasource.jdbc.max-lifetime]`


[.description]
--
The max lifetime of a connection.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_MAX_LIFETIME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_MAX_LIFETIME+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`By default, there is no restriction on the lifespan of a connection.`


a| [[quarkus-agroal_quarkus.datasource.jdbc.transaction-isolation-level]]`link:#quarkus-agroal_quarkus.datasource.jdbc.transaction-isolation-level[quarkus.datasource.jdbc.transaction-isolation-level]`


[.description]
--
The transaction isolation level.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_TRANSACTION_ISOLATION_LEVEL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_TRANSACTION_ISOLATION_LEVEL+++`
endif::add-copy-button-to-env-var[]
-- a|
`undefined`, `none`, `read-uncommitted`, `read-committed`, `repeatable-read`, `serializable` 
|


a| [[quarkus-agroal_quarkus.datasource.jdbc.extended-leak-report]]`link:#quarkus-agroal_quarkus.datasource.jdbc.extended-leak-report[quarkus.datasource.jdbc.extended-leak-report]`


[.description]
--
Collect and display extra troubleshooting info on leaked connections.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_EXTENDED_LEAK_REPORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_EXTENDED_LEAK_REPORT+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-agroal_quarkus.datasource.jdbc.flush-on-close]]`link:#quarkus-agroal_quarkus.datasource.jdbc.flush-on-close[quarkus.datasource.jdbc.flush-on-close]`


[.description]
--
Allows connections to be flushed upon return to the pool. It's not enabled by default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_FLUSH_ON_CLOSE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_FLUSH_ON_CLOSE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-agroal_quarkus.datasource.jdbc.detect-statement-leaks]]`link:#quarkus-agroal_quarkus.datasource.jdbc.detect-statement-leaks[quarkus.datasource.jdbc.detect-statement-leaks]`


[.description]
--
When enabled, Agroal will be able to produce a warning when a connection is returned to the pool without the application having closed all open statements. This is unrelated with tracking of open connections. Disable for peak performance, but only when there's high confidence that no leaks are happening.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_DETECT_STATEMENT_LEAKS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_DETECT_STATEMENT_LEAKS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-agroal_quarkus.datasource.jdbc.new-connection-sql]]`link:#quarkus-agroal_quarkus.datasource.jdbc.new-connection-sql[quarkus.datasource.jdbc.new-connection-sql]`


[.description]
--
Query executed when first using a connection.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_NEW_CONNECTION_SQL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_NEW_CONNECTION_SQL+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-agroal_quarkus.datasource.jdbc.validation-query-sql]]`link:#quarkus-agroal_quarkus.datasource.jdbc.validation-query-sql[quarkus.datasource.jdbc.validation-query-sql]`


[.description]
--
Query executed to validate a connection.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_VALIDATION_QUERY_SQL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_VALIDATION_QUERY_SQL+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-agroal_quarkus.datasource.jdbc.pooling-enabled]]`link:#quarkus-agroal_quarkus.datasource.jdbc.pooling-enabled[quarkus.datasource.jdbc.pooling-enabled]`


[.description]
--
Disable pooling to prevent reuse of Connections. Use this when an external pool manages the life-cycle of Connections.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_POOLING_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_POOLING_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-agroal_quarkus.datasource.jdbc.transaction-requirement]]`link:#quarkus-agroal_quarkus.datasource.jdbc.transaction-requirement[quarkus.datasource.jdbc.transaction-requirement]`


[.description]
--
Require an active transaction when acquiring a connection. Recommended for production. WARNING: Some extensions acquire connections without holding a transaction for things like schema updates and schema validation. Setting this setting to STRICT may lead to failures in those cases.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_TRANSACTION_REQUIREMENT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_TRANSACTION_REQUIREMENT+++`
endif::add-copy-button-to-env-var[]
-- a|
`off`, `warn`, `strict` 
|


a| [[quarkus-agroal_quarkus.datasource.jdbc.tracing.enabled]]`link:#quarkus-agroal_quarkus.datasource.jdbc.tracing.enabled[quarkus.datasource.jdbc.tracing.enabled]`


[.description]
--
Enable JDBC tracing.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_TRACING_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_TRACING_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false if quarkus.datasource.jdbc.tracing=false and true if quarkus.datasource.jdbc.tracing=true`


a| [[quarkus-agroal_quarkus.datasource.jdbc.tracing.trace-with-active-span-only]]`link:#quarkus-agroal_quarkus.datasource.jdbc.tracing.trace-with-active-span-only[quarkus.datasource.jdbc.tracing.trace-with-active-span-only]`


[.description]
--
Trace calls with active Spans only

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_TRACING_TRACE_WITH_ACTIVE_SPAN_ONLY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_TRACING_TRACE_WITH_ACTIVE_SPAN_ONLY+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-agroal_quarkus.datasource.jdbc.tracing.ignore-for-tracing]]`link:#quarkus-agroal_quarkus.datasource.jdbc.tracing.ignore-for-tracing[quarkus.datasource.jdbc.tracing.ignore-for-tracing]`


[.description]
--
Ignore specific queries from being traced

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_TRACING_IGNORE_FOR_TRACING+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_TRACING_IGNORE_FOR_TRACING+++`
endif::add-copy-button-to-env-var[]
--|string 
|`Ignore specific queries from being traced, multiple queries can be specified separated by semicolon, double quotes should be escaped with \`


a| [[quarkus-agroal_quarkus.datasource.jdbc.telemetry.enabled]]`link:#quarkus-agroal_quarkus.datasource.jdbc.telemetry.enabled[quarkus.datasource.jdbc.telemetry.enabled]`


[.description]
--
Enable OpenTelemetry JDBC instrumentation.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_TELEMETRY_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_TELEMETRY_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false if quarkus.datasource.jdbc.telemetry=false and true if quarkus.datasource.jdbc.telemetry=true`


a| [[quarkus-agroal_quarkus.datasource.jdbc.additional-jdbc-properties-additional-jdbc-properties]]`link:#quarkus-agroal_quarkus.datasource.jdbc.additional-jdbc-properties-additional-jdbc-properties[quarkus.datasource.jdbc.additional-jdbc-properties]`


[.description]
--
Other unspecified properties to be passed to the JDBC driver when creating new connections.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_JDBC_ADDITIONAL_JDBC_PROPERTIES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_JDBC_ADDITIONAL_JDBC_PROPERTIES+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|


h|[[quarkus-agroal_quarkus.datasource.named-data-sources-additional-named-datasources]]link:#quarkus-agroal_quarkus.datasource.named-data-sources-additional-named-datasources[Additional named datasources]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc]]`link:#quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc[quarkus.datasource."datasource-name".jdbc]`


[.description]
--
If we create a JDBC datasource for this datasource.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.driver]]`link:#quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.driver[quarkus.datasource."datasource-name".jdbc.driver]`


[.description]
--
The datasource driver class name

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_DRIVER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_DRIVER+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.transactions]]`link:#quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.transactions[quarkus.datasource."datasource-name".jdbc.transactions]`


[.description]
--
Whether we want to use regular JDBC transactions, XA, or disable all transactional capabilities.

When enabling XA you will need a driver implementing `javax.sql.XADataSource`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_TRANSACTIONS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_TRANSACTIONS+++`
endif::add-copy-button-to-env-var[]
-- a|
`enabled`, `xa`, `disabled` 
|`enabled`


a|icon:lock[title=Fixed at build time] [[quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.enable-metrics]]`link:#quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.enable-metrics[quarkus.datasource."datasource-name".jdbc.enable-metrics]`


[.description]
--
Enable datasource metrics collection. If unspecified, collecting metrics will be enabled by default if a metrics extension is active.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_ENABLE_METRICS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_ENABLE_METRICS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.tracing]]`link:#quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.tracing[quarkus.datasource."datasource-name".jdbc.tracing]`


[.description]
--
Enable JDBC tracing. Disabled by default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_TRACING+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_TRACING+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.telemetry]]`link:#quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.telemetry[quarkus.datasource."datasource-name".jdbc.telemetry]`


[.description]
--
Enable OpenTelemetry JDBC instrumentation.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_TELEMETRY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_TELEMETRY+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.url]]`link:#quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.url[quarkus.datasource."datasource-name".jdbc.url]`


[.description]
--
The datasource URL

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_URL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_URL+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.initial-size]]`link:#quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.initial-size[quarkus.datasource."datasource-name".jdbc.initial-size]`


[.description]
--
The initial size of the pool. Usually you will want to set the initial size to match at least the minimal size, but this is not enforced so to allow for architectures which prefer a lazy initialization of the connections on boot, while being able to sustain a minimal pool size after boot.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_INITIAL_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_INITIAL_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.min-size]]`link:#quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.min-size[quarkus.datasource."datasource-name".jdbc.min-size]`


[.description]
--
The datasource pool minimum size

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_MIN_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_MIN_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`0`


a| [[quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.max-size]]`link:#quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.max-size[quarkus.datasource."datasource-name".jdbc.max-size]`


[.description]
--
The datasource pool maximum size

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_MAX_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_MAX_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`20`


a| [[quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.background-validation-interval]]`link:#quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.background-validation-interval[quarkus.datasource."datasource-name".jdbc.background-validation-interval]`


[.description]
--
The interval at which we validate idle connections in the background.

Set to `0` to disable background validation.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_BACKGROUND_VALIDATION_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_BACKGROUND_VALIDATION_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`2M`


a| [[quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.foreground-validation-interval]]`link:#quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.foreground-validation-interval[quarkus.datasource."datasource-name".jdbc.foreground-validation-interval]`


[.description]
--
Perform foreground validation on connections that have been idle for longer than the specified interval.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_FOREGROUND_VALIDATION_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_FOREGROUND_VALIDATION_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.acquisition-timeout]]`link:#quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.acquisition-timeout[quarkus.datasource."datasource-name".jdbc.acquisition-timeout]`


[.description]
--
The timeout before cancelling the acquisition of a new connection

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_ACQUISITION_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_ACQUISITION_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`5`


a| [[quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.leak-detection-interval]]`link:#quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.leak-detection-interval[quarkus.datasource."datasource-name".jdbc.leak-detection-interval]`


[.description]
--
The interval at which we check for connection leaks.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_LEAK_DETECTION_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_LEAK_DETECTION_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`This feature is disabled by default.`


a| [[quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.idle-removal-interval]]`link:#quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.idle-removal-interval[quarkus.datasource."datasource-name".jdbc.idle-removal-interval]`


[.description]
--
The interval at which we try to remove idle connections.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_IDLE_REMOVAL_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_IDLE_REMOVAL_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`5M`


a| [[quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.max-lifetime]]`link:#quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.max-lifetime[quarkus.datasource."datasource-name".jdbc.max-lifetime]`


[.description]
--
The max lifetime of a connection.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_MAX_LIFETIME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_MAX_LIFETIME+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`By default, there is no restriction on the lifespan of a connection.`


a| [[quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.transaction-isolation-level]]`link:#quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.transaction-isolation-level[quarkus.datasource."datasource-name".jdbc.transaction-isolation-level]`


[.description]
--
The transaction isolation level.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_TRANSACTION_ISOLATION_LEVEL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_TRANSACTION_ISOLATION_LEVEL+++`
endif::add-copy-button-to-env-var[]
-- a|
`undefined`, `none`, `read-uncommitted`, `read-committed`, `repeatable-read`, `serializable` 
|


a| [[quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.extended-leak-report]]`link:#quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.extended-leak-report[quarkus.datasource."datasource-name".jdbc.extended-leak-report]`


[.description]
--
Collect and display extra troubleshooting info on leaked connections.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_EXTENDED_LEAK_REPORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_EXTENDED_LEAK_REPORT+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.flush-on-close]]`link:#quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.flush-on-close[quarkus.datasource."datasource-name".jdbc.flush-on-close]`


[.description]
--
Allows connections to be flushed upon return to the pool. It's not enabled by default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_FLUSH_ON_CLOSE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_FLUSH_ON_CLOSE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.detect-statement-leaks]]`link:#quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.detect-statement-leaks[quarkus.datasource."datasource-name".jdbc.detect-statement-leaks]`


[.description]
--
When enabled, Agroal will be able to produce a warning when a connection is returned to the pool without the application having closed all open statements. This is unrelated with tracking of open connections. Disable for peak performance, but only when there's high confidence that no leaks are happening.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_DETECT_STATEMENT_LEAKS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_DETECT_STATEMENT_LEAKS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.new-connection-sql]]`link:#quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.new-connection-sql[quarkus.datasource."datasource-name".jdbc.new-connection-sql]`


[.description]
--
Query executed when first using a connection.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_NEW_CONNECTION_SQL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_NEW_CONNECTION_SQL+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.validation-query-sql]]`link:#quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.validation-query-sql[quarkus.datasource."datasource-name".jdbc.validation-query-sql]`


[.description]
--
Query executed to validate a connection.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_VALIDATION_QUERY_SQL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_VALIDATION_QUERY_SQL+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.pooling-enabled]]`link:#quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.pooling-enabled[quarkus.datasource."datasource-name".jdbc.pooling-enabled]`


[.description]
--
Disable pooling to prevent reuse of Connections. Use this when an external pool manages the life-cycle of Connections.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_POOLING_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_POOLING_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.transaction-requirement]]`link:#quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.transaction-requirement[quarkus.datasource."datasource-name".jdbc.transaction-requirement]`


[.description]
--
Require an active transaction when acquiring a connection. Recommended for production. WARNING: Some extensions acquire connections without holding a transaction for things like schema updates and schema validation. Setting this setting to STRICT may lead to failures in those cases.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_TRANSACTION_REQUIREMENT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_TRANSACTION_REQUIREMENT+++`
endif::add-copy-button-to-env-var[]
-- a|
`off`, `warn`, `strict` 
|


a| [[quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.additional-jdbc-properties-additional-jdbc-properties]]`link:#quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.additional-jdbc-properties-additional-jdbc-properties[quarkus.datasource."datasource-name".jdbc.additional-jdbc-properties]`


[.description]
--
Other unspecified properties to be passed to the JDBC driver when creating new connections.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_ADDITIONAL_JDBC_PROPERTIES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_ADDITIONAL_JDBC_PROPERTIES+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|


a| [[quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.tracing.enabled]]`link:#quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.tracing.enabled[quarkus.datasource."datasource-name".jdbc.tracing.enabled]`


[.description]
--
Enable JDBC tracing.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_TRACING_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_TRACING_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false if quarkus.datasource.jdbc.tracing=false and true if quarkus.datasource.jdbc.tracing=true`


a| [[quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.tracing.trace-with-active-span-only]]`link:#quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.tracing.trace-with-active-span-only[quarkus.datasource."datasource-name".jdbc.tracing.trace-with-active-span-only]`


[.description]
--
Trace calls with active Spans only

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_TRACING_TRACE_WITH_ACTIVE_SPAN_ONLY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_TRACING_TRACE_WITH_ACTIVE_SPAN_ONLY+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.tracing.ignore-for-tracing]]`link:#quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.tracing.ignore-for-tracing[quarkus.datasource."datasource-name".jdbc.tracing.ignore-for-tracing]`


[.description]
--
Ignore specific queries from being traced

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_TRACING_IGNORE_FOR_TRACING+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_TRACING_IGNORE_FOR_TRACING+++`
endif::add-copy-button-to-env-var[]
--|string 
|`Ignore specific queries from being traced, multiple queries can be specified separated by semicolon, double quotes should be escaped with \`


a| [[quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.telemetry.enabled]]`link:#quarkus-agroal_quarkus.datasource.-datasource-name-.jdbc.telemetry.enabled[quarkus.datasource."datasource-name".jdbc.telemetry.enabled]`


[.description]
--
Enable OpenTelemetry JDBC instrumentation.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_TELEMETRY_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__JDBC_TELEMETRY_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false if quarkus.datasource.jdbc.telemetry=false and true if quarkus.datasource.jdbc.telemetry=true`

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
To write duration values, use the standard `java.time.Duration` format.
See the link:https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/time/Duration.html#parse(java.lang.CharSequence)[Duration#parse() javadoc] for more information.

You can also use a simplified format, starting with a number:

* If the value is only a number, it represents time in seconds.
* If the value is a number followed by `ms`, it represents time in milliseconds.

In other cases, the simplified format is translated to the `java.time.Duration` format for parsing:

* If the value is a number followed by `h`, `m`, or `s`, it is prefixed with `PT`.
* If the value is a number followed by `d`, it is prefixed with `P`.
====
endif::no-duration-note[]
